force-app/main/default/objects/Vendor_Program_Group_Member__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Controls whether this group membership is currently in effect.</description>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>