force-app/main/default/objects/Vendor_Program_Group_Member__c/fields/Inherited_Program_Requirement_Group__c.field-meta.xml
<CustomField>
    <fullName>Inherited_Program_Requirement_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional; could indicate which Requirement Group is being propagated via this membership.</description>
    <label>Inherited Program Requirement Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Group Members</relationshipLabel>
    <relationshipName>Inherited_Program_Requirement_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>