force-app/main/default/objects/Vendor_Program_Group_Member__c/fields/Is_Target__c.field-meta.xml
<CustomField>
    <fullName>Is_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Target</label>
    <type>Checkbox</type>
</CustomField>