force-app/main/default/objects/Vendor_Program_Group_Member__c/fields/Required_Program__c.field-meta.xml
<CustomField>
    <fullName>Required_Program__c</fullName>
    <description>Program/customization that is required for this group member.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>Vendor Program Group Members</relationshipLabel>
    <relationshipName>Vendor_Program_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>