force-app/main/default/objects/Vendor_Program_Group_Member__c/fields/Vendor_Program_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Group__c</fullName>
    <description>Parent program group this member belongs to.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Program Group</label>
    <referenceTo>Vendor_Program_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Group Members</relationshipLabel>
    <relationshipName>Vendor_Program_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>